{
    "name": "GameInput",
    "maps": [
        {
            "name": "Gameplay",
            "id": "787942bb-1e34-4e10-ad33-e9425684ae08",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "096d8fd8-3575-4cff-92fe-f684709aaec9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Mouse_Delta",
                    "type": "PassThrough",
                    "id": "060a9f0a-a364-4b3b-a3c8-0b18fba54302",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Mouse_Left",
                    "type": "Button",
                    "id": "86d4609d-cbab-4561-b1a1-945f34fdfd1c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Mouse_Right",
                    "type": "Button",
                    "id": "c1829f7f-1517-4aa3-b6a4-3e942715146a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Mouse_Middle",
                    "type": "Button",
                    "id": "d1ff9a6f-7679-425b-ba1e-bc5bc1375187",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Mouse_Position",
                    "type": "Value",
                    "id": "064dbcc1-75c4-40e8-b76a-e5a0d621cc87",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Mouse_Scroll",
                    "type": "Value",
                    "id": "267e90e2-35a5-4157-97f3-60abd7d59d26",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "154bebe0-e975-4cdf-9b0f-eb4efae7fa2a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "da27f949-61f9-4dc2-8e7c-016d3d67baea",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "66fcce47-333f-4822-bbe5-893070896eaa",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "1f0958e6-5e96-41a4-a210-36499b9ac385",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "671e367d-471e-42fa-9dbf-495b884f8fbb",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "e90e5054-a25d-499b-b9e2-e841ab67566b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "52ffcba9-0de9-4cf2-ad0c-edc9ce23bc39",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouse_Delta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "365a79fe-8494-49e3-bc97-873da843902e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouse_Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ee6fa1a3-294d-454d-b790-36c2ab0b4976",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouse_Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "96f3593d-7db1-481d-9f7c-f8f21ddc1b4a",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouse_Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "984f54b3-7afe-4b2b-87b9-7d043b3bfe89",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouse_Scroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "045e871b-4402-4175-8da9-bb354416802c",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouse_Middle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2cb0734c-e701-413a-b8a8-777b3463eff5",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}